syntax = "proto3";
package protobuf;

option java_package = "org.github.netty.protobuf";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq {
    int32 subReqId = 1;

    string username = 2;

    string password = 3;

    string productName = 4;

    repeated string address = 5;
}
