syntax = "proto3";
package protobuf;

option java_package = "org.github.netty.protobuf";
option java_outer_classname = "SubscribeRespProto";

message SubscribeResp {
    int32 subReqId = 1;

    int32 respCode = 2;

    string desc = 5;
}
